--- a/assets/css/style_main.css
+++ b/assets/css/style_main.css
@@ -25,7 +25,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	padding: 1px;
+	padding: 0;
 	background-color: antiquewhite;
 }
 .nav_item {
@@ -37,8 +37,11 @@ body {
 	display: block;
 	color: #666;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 10px 10px;
 	text-decoration: none;
+}
+.current {
+	background-color:navajowhite;
 }
 .nav_item a:hover:not(.active) {
 	background-color: #ddd;
