Added more formatting

--- a/assets/css/style_main.css
+++ b/assets/css/style_main.css
@@ -6,15 +6,23 @@ body {
 	background-color: dimgrey;
 	
 }
+img {
+    max-width: 100%;
+    max-height: 100%;
+	
+}
+
 .main_title {
 	text-align: center;
 	margin-top:10px;
 }
 .left_side_logo {
+	margin-left:5%;
 	width: 25%;
 	height: 50px;
 }
 .navbar {
+	margin-right: 5%;
 	width:75%;
 	height: 50px;
 	float: right;
@@ -51,3 +59,8 @@ body {
 	color: white;
 	background-color: #4CAF50;
 }
+.card-me {
+	border-radius: 25px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
